# SimpleService

./: Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/simpleservice/: main.py
src/simpleservice/app/: __init__.py
src/simpleservice/app/handlers/: __init__.py
tests/: conftest.py  test_main.py
