[project]
name = "simpleservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{name = "Evgenii Dementev", email = "m6mok@yandex.ru"}]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
